--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -25,7 +25,7 @@
             </ul>
         </section>
         <section class="scenario-section">
-            <h2>Scénarios disponibles</h2>
+            <h2 id="number_of_available">Scénarios disponibles</h2>
             <ul id="scenarioList" class="scenario-list">
                 <script>
                     getAllPlugin();
